--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                           <div id = "navigation">
 	              <ul class = "nav-items">
                                         <li class = "nav-link">
-                                             <a href="home2.html"><b>Home</b></a>
+                                             <a href="#"><b>Home</b></a>
                                         </li>
                                         <li class = "nav-link">
 		    <a href = "oucourses.html"><b>Our Courses</b></a>	                   
